<resources>
    <string name="app_name">ExemploSharedPreferences</string>
    <string name="digite_seu_usuario">Digite seu usuário</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="manter_conectado">Manter conectado?</string>
    <string name="logout">Logout</string>
    <string name="login_invalido">Login inválido</string>
    <string name="salvar_em_arquivo">Salvar em arquivo</string>
    <string name="ler_arquivo">Ler arquivo</string>
    <string name="nao_foi_possivel_gravar_o_arquivo">Não foi possivel gravar o arquivo</string>
    <string name="nao_foi_possivel_ler">Não foi possivel ler o arquivo</string>
</resources>
